# hackathon_bringup

./: CMakeLists.txt  package.xml
data/: field_surveying.csv  field_surveying.geojson  field_surveying.json
env-hooks/: gazebo.dsv.in
launch/: evaluation.launch.py  simulator.launch.py
scripts/: generate_data_from_world
worlds/: demo.world
