<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hackathon_bringup</name>
  <version>0.0.0</version>
  <description>Package containing hackathon launches.</description>

  <maintainer email="cyrille.pierre@inrae.fr">Cyrille Pierre</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>ament_index_python</depend>
  <depend>tirrex_demo</depend>
  <depend>hackathon_evaluation</depend>
  <depend>collision_gazebo_plugin</depend>
  <depend>hackathon_gazebo_models</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
